--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# gemini | openai
+EMBEDDING_SERVICE=gemini
+
 # OpenAI API Key
 OPENAI_API_KEY=sk-your-openai-api-key-here
 
@@ -5,10 +8,11 @@ OPENAI_API_KEY=sk-your-openai-api-key-here
 GEMINI_API_KEY=your-gemini-api-key-here
 
 # PostgreSQL Configuration
+POSTGRES_DB=pgvector_experiment
 POSTGRES_USER=pgvector_user
 POSTGRES_PASSWORD=pgvector_password
-POSTGRES_PORT=5432
+POSTGRES_PORT=5433 # Changed port to 5433 to avoid conflicts
 
 # Database URL (automatically constructed by docker-compose)
 # Format: postgresql://username:password@host:port/database
-DATABASE_URL=postgresql://pgvector_user:pgvector_password@localhost:5432/pgvector_experiment
+DATABASE_URL=postgresql://pgvector_user:pgvector_password@postgres:5433/pgvector_experiment
