--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     build:
@@ -9,15 +7,15 @@ services:
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-pgvector_user}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-pgvector_password}
-      POSTGRES_DB: postgres
+      POSTGRES_DB: ${POSTGRES_DB:-pgvector_experiment}
     ports:
-      - "${POSTGRES_PORT:-5432}:5432"
+      - "${POSTGRES_PORT:-5433}:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql
     networks:
       - pgvector_network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-pgvector_user}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-pgvector_user} -d ${POSTGRES_DB:-pgvector_experiment}"]
       interval: 10s
       timeout: 5s
       retries: 5
