--- a/Dockerfile.postgres
+++ b/Dockerfile.postgres
@@ -1,21 +1,5 @@
-FROM postgres:16
 
-# Install build dependencies
-RUN apt-get update && \
-    apt-get install -y \
-    build-essential \
-    git \
-    postgresql-server-dev-16 \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install pgvector extension
-RUN cd /tmp && \
-    git clone --branch v0.8.1 https://github.com/pgvector/pgvector.git && \
-    cd pgvector && \
-    make && \
-    make install && \
-    cd / && \
-    rm -rf /tmp/pgvector
+FROM pgvector/pgvector:pg18-trixie
 
 # Copy initialization script
 COPY init.sql /docker-entrypoint-initdb.d/
