--- a/Dockerfile.python
+++ b/Dockerfile.python
@@ -1,19 +1,28 @@
-FROM python:3.12-slim
+FROM ghcr.io/astral-sh/uv:trixie
 
-# Set working directory
+# Copy the project into the image
+ADD . /app
+
+# Sync the project into a new environment, asserting the lockfile is up to date
 WORKDIR /app
+RUN uv sync --locked
 
-# Install uv
-RUN pip install --no-cache-dir uv
+# # Set working directory
+# WORKDIR /app
 
-# Copy project files
-COPY pyproject.toml ./
+# # Install uv
+# RUN pip install --no-cache-dir uv
 
-# Install dependencies using uv
-RUN uv pip install --system -r pyproject.toml || true
+# # Copy project files
+# COPY pyproject.toml ./
 
-# Copy application code
-COPY . .
+# # Install dependencies using uv
+# RUN rm -rf .venv && uv pip install --system -r pyproject.toml || true
+
+
+
+# # Copy application code
+# COPY . .
 
 # Keep container running for development
 CMD ["tail", "-f", "/dev/null"]
