--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ GEMINI_API_KEY=your-gemini-api-key-here
 POSTGRES_DB=pgvector_experiment
 POSTGRES_USER=pgvector_user
 POSTGRES_PASSWORD=pgvector_password
-POSTGRES_PORT=5433 # Changed port to 5433 to avoid conflicts
+POSTGRES_PORT=5433 # Changed exposed port to 5433 to avoid conflicts
 
 # Database URL (automatically constructed by docker-compose)
 # Format: postgresql://username:password@host:port/database
